fix(graalvm-js): http api fixes
feat: initial support for elide's typescript types
feat: initial support code for samples repo
feat: add generic `http` package
feat: add micronaut `http` implementation
feat: add netty `http` implementation
feat: add plain jdk `http` implementation
fix: expose `body` parameter to js http handlers (on req)
fix: gather request body in netty pipeline
fix: gather and expose parsed url and query params
fix: access to http request as js object
fix: some compat issues with future bionic libc support
test: add tests for micronaut http types
test: add tests for netty http types
test: add tests for jdk http types
chore: fmt and warning fixes
chore: update rustc → `1.86.0`
chore: update all crates
chore: add new `exec` package
chore: maven dep upgrades
chore: add `filament` dependency for `exec`

Fixes and closes elide-dev/elide#1357
Fixes and closes elide-dev/elide#1358
Fixes and closes elide-dev/elide#1359

Signed-off-by: Sam Gammon <sam@elide.dev>