@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 Elide Technologies, Inc.
+ * Copyright (c) 2024-2025 Elide Technologies, Inc.
  *
  * Licensed under the MIT license (the "License"); you may not use this file except in compliance
  * with the License. You may obtain a copy of the License at
@@ -11,6 +11,9 @@
  * License for the specific language governing permissions and limitations under the License.
  */
 
+@file:Suppress("unused")
+
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import elide.internal.conventions.kotlin.*
 
 plugins {
@@ -46,6 +49,10 @@ elide {
 
 group = "dev.elide"
 
+val compileJvmArgs = listOf(
+  "--add-exports=java.net.http/jdk.internal.net.http=ALL-UNNAMED",
+)
+
 dependencies {
   common {
     api(projects.packages.base)
@@ -55,12 +62,27 @@ dependencies {
   }
 
   commonTest {
-    // Testing
     implementation(projects.packages.test)
-    implementation(kotlin("test"))
   }
 
   jvm {
     implementation(mn.micronaut.http)
+    implementation(mn.micronaut.http.netty)
+    implementation(mn.netty.codec.http)
+    implementation(mn.netty.codec.http2)
   }
+}
+
+tasks.withType<JavaCompile>().configureEach {
+  options.compilerArgs.addAll(compileJvmArgs)
+}
+
+tasks.withType<KotlinCompile>().configureEach {
+  compilerOptions {
+    freeCompilerArgs.addAll(compileJvmArgs.map { "-Xjavac-arguments=$it" })
+  }
+}
+
+tasks.named("jvmTest", Test::class) {
+  jvmArgs(compileJvmArgs)
 }
